Ajout des fichiers HTML pour le formulaire

--- a/Vue/Aceuil.html
+++ b/Vue/Aceuil.html
@@ -45,7 +45,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background-color: rgb(235, 36, 36);
+      background-color: rgb(235, 36, 189);
       color: rgb(252, 248, 234);
       text-decoration: none;
       font-size: 1.2em;
@@ -111,7 +111,7 @@
   <!-- Conteneur des deux grands boutons -->
   <div class="nav-buttons">
     <a href="page2.html">Visiteur / Client</a>
-    <a href="#">Connexion</a>
+    <a href="connexion.html">Connexion</a>
   </div>
 
   <!-- Texte d'accueil en bas de la page -->
