--- a/Vue/catalogue.html
+++ b/Vue/catalogue.html
@@ -6,7 +6,7 @@
   <title>Catalogue</title>
   <style>
     :root {
-      --gold: #ff0505;
+      --gold: #ff05bc;
       --black: #121212;
       --dark-gray: #080808;
     }
