--- a/Vue/page2.html
+++ b/Vue/page2.html
@@ -8,7 +8,7 @@
   <!-- 🎨 STYLES CSS INTERNES -->
   <style>
     :root {
-      --gold: #ff0000;
+      --gold: #ffdd01;
       --black: #000000;
       --white: #ffffff;
       --dark-gray: #020101;
@@ -65,18 +65,19 @@
 
     .product-card {
       background-color: var(--dark-gray);
-      border: 1px solid #fc0303;
+      border: 1px solid #f8cb00;
       border-radius: 15px;
       padding: 1rem;
       display: flex;
       flex-direction: column;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
+      box-shadow: 0 2px 8px rgba(153, 73, 171, 0.6);
     }
 
     .product-header {
       display: flex;
       align-items: center;
       margin-bottom: 1rem;
+      background-color: #401a35;
     }
 
     .product-avatar {
@@ -101,7 +102,7 @@
     .product-image2,
     .product-image3 {
       width: 100%;
-      background-color: #333;
+      background-color: #141215;
       border-radius: 10px;
       margin-bottom: 1rem;
       display: flex;
@@ -156,14 +157,14 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background-color: rgb(133, 4, 4);
-      color: rgb(252, 248, 234);
+      background-color: rgb(211, 208, 56);
+      color: rgb(11, 11, 11);
       text-decoration: none;
       font-size: 1.2em;
       font-weight: bold;
       border-radius: 20px;
       transition: transform 0.3s, background-color 0.3s;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 4px 20px rgba(250, 175, 255, 0.3);
       cursor: pointer;
     }
   </style>
